added services to service html and navbar

--- a/aix.html
+++ b/aix.html
@@ -8,7 +8,7 @@
 <html lang="zxx">
 
 <head>
-  <title>Genesys Informatica | Infraestructura</title>
+  <title>Genesys Informatica | AIX</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <meta name="keywords" content="Casita a Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -51,8 +51,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <ul class="navbar-nav">
 
                 <li><a class="nav-link text-uppercase" href="index.html">Home</a></li>
-                <li class="nav-item active"><a class="nav-link text-uppercase" href="infraestructura.html">Infraestructura</a></li>
-                <li class="nav-item dropdown">
+                <li class="nav-item"><a class="nav-link text-uppercase" href="infraestructura.html">Infraestructura</a></li>
+                <li class="nav-item dropdown active">
                   <a class="nav-link text-uppercase dropdown-toggle" href="servicios.html" id="navbarDropdown" role="button"
                     aria-haspopup="true" aria-expanded="false">
                     Servicios <i class="fas fa-caret-down"></i>
@@ -67,7 +67,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </li>
                 <li><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
                 <li><a class="nav-link text-uppercase" href="contact.html">Contacto</a></li>
-
               </ul>
               <!-- <div class="top-info text-left">
                 <ul>
@@ -91,7 +90,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="container">
       <div class="inner-sec py-lg-5 py-3">
 
-        <h3 class="tittle text-center mb-md-5 mb-4">Infraestructura</h3>
+        <h3 class="tittle text-center mb-md-5 mb-4">AIX / Linux</h3>
 
       </div>
     </div>
