--- a/servicios.html
+++ b/servicios.html
@@ -59,7 +59,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="impresion.html">Impresion</a>
-                    <a class="dropdown-item" href="instalaciones.html" title="">Instalaciones Fisicas</a>
+                    <a class="dropdown-item" href="instalaciones.html">Instalaciones Fisicas</a>
+                    <a class="dropdown-item" href="vmware.html">VMware</a>
+                    <a class="dropdown-item" href="aix.html">AIX / Linux</a>
+                    <a class="dropdown-item" href="comunicaciones.html">Comunicaciones</a>
                   </div>
                 </li>
                 <li><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
@@ -89,13 +92,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="inner-sec py-lg-5 py-3">
         <h3 class="tittle text-center">Servicios</h3>
         <div class="row mt-lg-5 mt-md-4 mt-4">
+
           <div class="col-lg-4 about-in text-center">
             <div class="card">
               <div class="card-body">
                 <i class="fas fa-key mb-4"></i>
-                <h5 class="card-title">Asesoria de Preventa</h5>
+                <h5 class="card-title">Impresion</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
-                <a href="instalaciones.html" class="btn btn-primary mt-3 details-button">Detalles</a>
+                <a href="impresion.html" class="btn btn-primary mt-3 details-button">Detalles</a>
               </div>
             </div>
           </div>
@@ -115,9 +119,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="card">
               <div class="card-body">
                 <i class="fas fa-map-marker mb-4"></i>
-                <h5 class="card-title">Mantenimiento</h5>
+                <h5 class="card-title">Vmware</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
-                <a href="instalaciones.html" class="btn btn-primary mt-3 details-button">Detalles</a>
+                <a href="vmware.html" class="btn btn-primary mt-3 details-button">Detalles</a>
               </div>
             </div>
           </div>
@@ -126,9 +130,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="card">
               <div class="card-body">
                 <i class="fas fa-building mb-4"></i>
-                <h5 class="card-title">Migracion de Datos</h5>
+                <h5 class="card-title">AIX / Linux</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
-                <a href="instalaciones.html" class="btn btn-primary mt-3 details-button">Detalles</a>
+                <a href="aix.html" class="btn btn-primary mt-3 details-button">Detalles</a>
               </div>
             </div>
           </div>
@@ -137,9 +141,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="card">
               <div class="card-body">
                 <i class="fas fa-map-marker mb-4"></i>
-                <h5 class="card-title">Cableado</h5>
+                <h5 class="card-title">Comunicaciones</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
-                <a href="instalaciones.html" class="btn btn-primary mt-3 details-button">Detalles</a>
+                <a href="comunicaciones.html" class="btn btn-primary mt-3 details-button">Detalles</a>
               </div>
             </div>
           </div>
