--- a/impresion.html
+++ b/impresion.html
@@ -59,7 +59,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="impresion.html">Impresion</a>
-                    <a class="dropdown-item" href="instalaciones.html" title="">Instalaciones Fisicas</a>
+                    <a class="dropdown-item" href="instalaciones.html">Instalaciones Fisicas</a>
+                    <a class="dropdown-item" href="vmware.html">VMware</a>
+                    <a class="dropdown-item" href="aix.html">AIX / Linux</a>
+                    <a class="dropdown-item" href="comunicaciones.html">Comunicaciones</a>
                   </div>
                 </li>
                 <li><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
