--- a/impresion.html
+++ b/impresion.html
@@ -28,12 +28,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   <link href="css/style.css" rel='stylesheet' type='text/css' />
   <link href="css/impresion.css" rel='stylesheet' type='text/css' />
   <link href="css/instalaciones.css" rel='stylesheet' type='text/css' />
-  <link href="css/fontawesome-all.css" rel="stylesheet">
-  <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+    crossorigin="anonymous">
+  <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800" rel="stylesheet"> -->
 </head>
 
 <body>
-  <!-- mian-content -->
+  <!-- main-content -->
   <section class="mian-content-1">
     <!-- /header-top-->
     <div class="header-top">
@@ -120,99 +121,183 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
   <hr>
 
-  <section class="banner-bottom py-lg-5 py-md-5" id="services">
+  <section class="banner-bottom" id="services">
     <div class="container">
-      <div class="inner-secs">
-        <!-- <h3 class="tittle text-center mb-md-5 mb-4"></h3> -->
-
-        <!-- SAI -->
+      <div class="inner-sec py-lg-5 py-3">
+        <!-- 3 card section -->
         <div class="row middle-grids pt-lg-5">
-          <div class="col-lg-8 advantage-grid-info">
-            <div class="advantage_left">
-              <h4 class="mb-2">SAI</h4>
-              <h3 class="mb-2">Ventajas y Beneficios</h3>
-              <!-- <p class="mt-2">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
-                  at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum
-                  in, egestas vestibulum tellus.</p> -->
-
-
-              <ul class="instalaciones-servicios-ul">
-                <li><b>Beneficios economicos: </b> ayudan a ahorrar hasta en un 30% en el costo total de los
-                  egresos utilizados en procesos relacionados con documentos, por ejemplo, papel, tinta, servicio,
-                  electricidad y gastos en TI.</li>
-                <li><b>Beneficios ambientales: </b>brindan soluciones útiles para reducir el consumo de papel, el uso
-                  de la electricidad, y minimizar la cantidad de desperdicios. Los productos Lexmark reducen en un 9%
-                  el consumo de energía en su vida útil, y produce un 10% menos de gases de efecto invernadero.</li>
-                <li><b>Tiempos organizacionales: </b>resultan una mejora en la eficiencia, productividad y tiempo de
-                  procesos de trabajo.</li>
-                <li><b>Conectividad: </b>los usuarios pueden imprimir en cualquier equipo desde dispositivos móviles
-                  como SmartPhones, Tablets o laptops sin importar de dónde hayan enviado el documento.</li>
-                <li><b>Seguridad: </b>mantener la información completamente segura y confidencial. Se puede controlar
-                  y supervisar el uso y los dispositivos, establecer reglas de impresión con el grupo de trabajo,
-                  aplicar fuertes medidas de seguridad, realizar seguimientos, y almacenar datos en la nube.</li>
-              </ul>
-
-
+          <div class="col-lg-4 about-in middle-grid-info text-center">
+            <div class="card">
+              <div class="card-body">
+                <i class="fas fa-check-double mb-2"></i>
+                <h5 class="card-title text-uppercase my-3">
+                  Experiencia
+                </h5>
+                <p class="card-text">
+                  En Servicios Administrados desde 2009 en diferentes modalidades, con clientes diversos y dispersion
+                  geografica.
+                </p>
+              </div>
             </div>
-
-
           </div>
-          <div class="col-lg-4 advantage-grid-info1">
-            <div class="advantage_left1 text-center">
-              <img src="images/DataCenter1.jpg" class="img-fluid" alt="
-                Data-Center1">
+          <div class="col-lg-4 about-in middle-grid-info text-center">
+            <div class="card">
+              <div class="card-body">
+                <i class="fa fa-chalkboard-teacher mb-2"></i>
+                <h5 class="card-title text-uppercase my-3">
+                  Entrenamiento
+                </h5>
+                <p class="card-text">
+                  A usuarios finales y técnicos de su empresa.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 about-in middle-grid-info text-center">
+            <div class="card">
+              <div class="card-body">
+                <i class="fas fa-handshake mb-2"></i>
+                <h5 class="card-title text-uppercase my-3">Compromiso</h5>
+                <p class="card-text">
+                  de Genesys de asesorar y acompañarlos en su evolucion de sus procesos de negocio con soporte de las
+                  impresoras Multifuncionales en el manejo de documentos.
+                </p>
+              </div>
             </div>
           </div>
         </div>
-
-        <!-- Marcas de Impresoras -->
+        <!-- 2 card section -->
         <div class="row middle-grids pt-lg-5">
-          <div class="col-lg-6 advantage-grid-info1">
-            <div class="advantage_left1 text-center">
-              <img src="images/Cableado1.jpg" class="img-fluid" alt="cableado de ethernet y fibras">
+          <div class="col-lg-4 offset-2 about-in middle-grid-info text-center">
+            <div class="card">
+              <div class="card-body">
+                <i class="fas fa-project-diagram mb-2"></i>
+                <h5 class="card-title text-uppercase my-3">
+                  Plan
+                </h5>
+                <p class="card-text">
+                  De implementacion de implementacion de las soluciones de impresion con el objetivo de hacer
+                  eficientes los procesos de impresion, copiado, y digitalizacion de documentos reduciento costos en el
+                  tiempo, sin sacrificar calidad y eficiencia.
+                </p>
+              </div>
             </div>
           </div>
-          <div class="col-lg-6 advantage-grid-info pt-md-5 px-md-5">
-            <div class="advantage_left">
-              <h4 class="mb-2">Impresoras</h4>
-              <h3>Marcas</h3>
-              <ul class="instalaciones-servicios-ul">
-                <li>Lexmark</li>
-                <li>Brother</li>
-                <li>Samsung</li>
-                <li>Epson</li>
-              </ul>
+          <div class="col-lg-4 about-in middle-grid-info text-center">
+            <div class="card">
+              <div class="card-body">
+                <i class="fas fa-user-lock mb-2"></i>
+                <h5 class="card-title text-uppercase my-3">
+                  Seguridad
+                </h5>
+                <p class="card-text">
+                  En la continuidad de la operacion de las empresas, a traves de equipos adicionales de respaldo y
+                  cobertura en sitio de Centros Autorizados de Servicio (CAS) de LEXMARK.
+                </p>
+              </div>
             </div>
           </div>
-        </div>
 
-        <!-- Software de Monitoreo -->
-        <div class="row middle-grids pt-lg-5">
-          <div class="col-lg-6 advantage-grid-info pt-md-5">
-            <div class="advantage_left">
-              <h4 class="mb-2">Software</h4>
-              <h3 class="mb-2">Control y Monitoreo de Impresiones</h3>
-
-              <ul class="instalaciones-servicios-ul">
-                <li>PaperCut</b></li>
-                <li>Lexmark Print Management</li>
-                <li>Lexmark Markvision Enterprise</li>
-                <li>3manager</li>
-              </ul>
-
-            </div>
-          </div>
-          <div class="col-lg-6 advantage-grid-info1">
-            <div class="advantage_left1 text-center">
-              <img src="images/AC.jpg" class="img-fluid" alt="
-                Data-Center1">
-            </div>
-          </div>
         </div>
       </div>
     </div>
   </section>
 
+  <!--
+  <section class="banner-bottom py-lg-5 py-md-5" id="services">
+    <div class="container">
+      <div class="inner-secs">
+        <h3 class="tittle text-center mb-md-5 mb-4"></h3>
+
+  // SAI
+  <div class="row middle-grids pt-lg-5">
+    <div class="col-lg-8 advantage-grid-info">
+      <div class="advantage_left">
+        <h4 class="mb-2">SAI</h4>
+        <h3 class="mb-2">Ventajas y Beneficios</h3>
+        <p class="mt-2">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
+                  at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum
+                  in, egestas vestibulum tellus.</p>
+
+
+        <ul class="instalaciones-servicios-ul">
+          <li><b>Beneficios economicos: </b> ayudan a ahorrar hasta en un 30% en el costo total de los
+            egresos utilizados en procesos relacionados con documentos, por ejemplo, papel, tinta, servicio,
+            electricidad y gastos en TI.</li>
+          <li><b>Beneficios ambientales: </b>brindan soluciones útiles para reducir el consumo de papel, el uso
+            de la electricidad, y minimizar la cantidad de desperdicios. Los productos Lexmark reducen en un 9%
+            el consumo de energía en su vida útil, y produce un 10% menos de gases de efecto invernadero.</li>
+          <li><b>Tiempos organizacionales: </b>resultan una mejora en la eficiencia, productividad y tiempo de
+            procesos de trabajo.</li>
+          <li><b>Conectividad: </b>los usuarios pueden imprimir en cualquier equipo desde dispositivos móviles
+            como SmartPhones, Tablets o laptops sin importar de dónde hayan enviado el documento.</li>
+          <li><b>Seguridad: </b>mantener la información completamente segura y confidencial. Se puede controlar
+            y supervisar el uso y los dispositivos, establecer reglas de impresión con el grupo de trabajo,
+            aplicar fuertes medidas de seguridad, realizar seguimientos, y almacenar datos en la nube.</li>
+        </ul>
+
+
+      </div>
+
+
+    </div>
+    <div class="col-lg-4 advantage-grid-info1">
+      <div class="advantage_left1 text-center">
+        <img src="images/DataCenter1.jpg" class="img-fluid" alt="
+                Data-Center1">
+      </div>
+    </div>
+  </div>
+
+  // Marcas de Impresoras
+  <div class="row middle-grids pt-lg-5">
+    <div class="col-lg-6 advantage-grid-info1">
+      <div class="advantage_left1 text-center">
+        <img src="images/Cableado1.jpg" class="img-fluid" alt="cableado de ethernet y fibras">
+      </div>
+    </div>
+    <div class="col-lg-6 advantage-grid-info pt-md-5 px-md-5">
+      <div class="advantage_left">
+        <h4 class="mb-2">Impresoras</h4>
+        <h3>Marcas</h3>
+        <ul class="instalaciones-servicios-ul">
+          <li>Lexmark</li>
+          <li>Brother</li>
+          <li>Samsung</li>
+          <li>Epson</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  // Software de Monitoreo
+  <div class="row middle-grids pt-lg-5">
+    <div class="col-lg-6 advantage-grid-info pt-md-5">
+      <div class="advantage_left">
+        <h4 class="mb-2">Software</h4>
+        <h3 class="mb-2">Control y Monitoreo de Impresiones</h3>
+
+        <ul class="instalaciones-servicios-ul">
+          <li>PaperCut</b></li>
+          <li>Lexmark Print Management</li>
+          <li>Lexmark Markvision Enterprise</li>
+          <li>3manager</li>
+        </ul>
+
+      </div>
+    </div>
+    <div class="col-lg-6 advantage-grid-info1">
+      <div class="advantage_left1 text-center">
+        <img src="images/AC.jpg" class="img-fluid" alt="
+                Data-Center1">
+      </div>
+    </div>
+  </div>
+  </div>
+  </div>
+  </section>
+
+  -->
   <hr>
 
   <section class="banner-bottom py-lg-5 py-md-5 py-3" id="logos">
