mobile fix for printing section

--- a/impresion.html
+++ b/impresion.html
@@ -167,8 +167,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           </div>
         </div>
         <!-- 2 card section -->
-        <div class="row middle-grids pt-lg-5">
-          <div class="col-lg-4 offset-2 about-in middle-grid-info text-center">
+        <div class="row pt-lg-5">
+          <div class="col-lg-4 offset-lg-2 about-in middle-grid-info text-center">
             <div class="card">
               <div class="card-body">
                 <i class="fas fa-project-diagram mb-2"></i>
