changed SAI paragraph

--- a/impresion.html
+++ b/impresion.html
@@ -102,8 +102,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <h3>Servicios Administrados de Impresion</h3>
               <p class="mt-2">
                 Con nuestros servicios administrados de impresion deja en nuestras manos la instalacion y mantenimiento
-                de todas las impresoras. Deja que nuestros expertos gestionen la impresion y disfruta de beneficios
-                como reduccion de costos en papel, tonner y procesos administrativos con una simple cuota mensual.
+                de todas las impresoras. Dejanos gestionar tu servicio de impresion y disfruta de beneficios
+                como reduccion de costos en papel, tonner, y tiempos internos de procesos administrativos con una
+                simple cuota mensual.
               </p>
             </div>
           </div>
