navbar fix, paragraph description in printing

--- a/impresion.html
+++ b/impresion.html
@@ -101,10 +101,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <!-- <h4 class="mb-2">SAI</h4> -->
               <h3>Servicios Administrados de Impresion</h3>
               <p class="mt-2">
-                Con nuestros servicios administrados de impresion deja en nuestras manos la instalacion y mantenimiento
-                de todas las impresoras. Dejanos gestionar tu servicio de impresion y disfruta de beneficios
-                como reduccion de costos en papel, tonner, y tiempos internos de procesos administrativos con una
-                simple cuota mensual.
+                Servicios administrados de Impresión y manejo de documentos.
+                Con la solución de servicios administrados de impresión puedes tener contabilizado cuánto gasta tu
+                empresa en la generación de documentos, pudiendo así dirigir los gastos de consumibles y papel a cada
+                una de las áreas. <br><br>Con las soluciones de impresión dejaran de generarse documentos
+                innecesarios, duplicados, modificados o externos a la empresa. Reduciendo el gasto ambiental al
+                consumir menos papel lo cual se verá reflejado en las finanzas de tu empresa. <br><br>Dejaras de
+                preocuparte por capacitación de técnicos y el mantenimiento de los dispositivos, adquirir equipos y su
+                renovación.
               </p>
             </div>
           </div>
