--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <li><a class="nav-link text-uppercase" href="infraestructura.html">Infraestructura</a></li>
                 <li class="nav-item dropdown">
                   <a class="nav-link text-uppercase dropdown-toggle" href="servicios.html" id="navbarDropdown" role="button"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    aria-haspopup="true" aria-expanded="false">
                     Servicios <i class="fas fa-caret-down"></i>
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -70,7 +70,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   </div>
                 </li>
                 <li><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
-                <li> <a class="nav-link text-uppercase" href="contact.html">Contacto</a></li>
+                <li><a class="nav-link text-uppercase" href="contact.html">Contacto</a></li>
               </ul>
               <!-- <div class="top-info text-left">
                                 <ul>
