--- a/comunicaciones.html
+++ b/comunicaciones.html
@@ -26,7 +26,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   <link rel="icon" href="./images/Logotipo Genesys Solo Abaco.png">
   <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
   <link href="css/style.css" rel='stylesheet' type='text/css' />
-  <link href="css/contact.css" rel='stylesheet' type='text/css' />
+  <!-- <link href="css/contact.css" rel='stylesheet' type='text/css' /> -->
+  <link rel="stylesheet" href="css/instalaciones.css">
   <link href="css/fontawesome-all.css" rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800" rel="stylesheet">
 </head>
@@ -86,12 +87,89 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   </section>
   <!-- //mian-content-->
   <!-- /Contact-->
-  <section class="banner-bottom py-lg-5 py-md-5 py-3">
+  <section class="banner-bottom py-lg-5 py-md-5 py-3" id="services">
     <div class="container">
       <div class="inner-sec py-lg-5 py-3">
-
-        <h3 class="tittle text-center mb-md-5 mb-4">Comunicaciones</h3>
-
+        <h3 class="tittle text-center mb-md-5 mb-4">Telecomunicacion</h3>
+        <div class="row middle-grids pt-lg-5">
+          <div class="col-lg-6 advantage-grid-info pt-md-5">
+            <div class="advantage_left">
+              <h4 class="mb-2">Servicios Administrados de Redes</h4>
+              <h3>Switching y Routing</h3>
+              <ul class="instalaciones-servicios-ul ml-4 mt-2">
+                <li>Revision de tu Red Fisica</li>
+                <li>Diseño e Implementacion </li>
+                <li>Administracion y Monitoreo</li>
+                <li>Soporte y Mantenimiento</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-6 advantage-grid-info1">
+            <div class="advantage_left1 text-center">
+              <img src="https://lh3.googleusercontent.com/S5vdUqgjF7I-xW23Wm4u3d24enArTzNzff0uTsYIXvbjQwBLM-1a7Ocb6IvsSBRPGM3685StI5F4yyMKnWkXQ9IeKdP1o1otXXv3KhjoTUfW940Zhtgp3Yz44jfERJbMOVE3KqXRXBE=w2400"
+                class="img-fluid" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="row middle-grids pt-lg-5">
+          <div class="col-lg-6 advantage-grid-info1">
+            <div class="advantage_left1 text-center">
+              <img src="https://lh3.googleusercontent.com/ksYLy9sPDmG7YMt1LNUgoBEkyOuDa_J6mesm4k7mzydvfc-cZhnSNlmTbQrRNPH9BUV-8mZeLjrKS8VmojNZUB6sho5HKUWK578UT2dhLnBxlnMS4P9UWTTEQcmu_BE3GWzmwyKJ4LM=w2400"
+                class="img-fluid" alt="">
+            </div>
+          </div>
+          <div class="col-lg-6 advantage-grid-info pt-md-5">
+            <div class="advantage_left">
+              <h4 class="mb-2">Conexion Privada y Confiable a la Nube</h4>
+              <h3>Cloud Connectivity</h3>
+              <ul class="instalaciones-servicios-ul ml-4 mt-2">
+                <li>Garantizamos tu Ancho de Banda</li>
+                <li>Latencia mejorada a todos los servicios de nube.</li>
+                <li>Servicio único de conectividad entre nubes</li>
+                <li>Enlaces Internacionales</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="row middle-grids pt-lg-5">
+          <div class="col-lg-6 advantage-grid-info pt-md-5">
+            <div class="advantage_left">
+              <h4 class="mb-2">Moderniza tus salas de juntas</h4>
+              <h3>Smart Media</h3>
+              <ul class="instalaciones-servicios-ul ml-4 mt-2">
+                <li>Salas de Videoconferencias</li>
+                <li>Soluciones de Audio y Video</li>
+                <li>Comunicacion Interna a travez de Señalizacion Digital</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-6 advantage-grid-info1">
+            <div class="advantage_left1 text-center">
+              <img src="https://lh3.googleusercontent.com/bcizaK7vtOs1sRTfSf4wd3Z3pks6f6CF8nc_t7IdWXSzsPeKNTv8gZ8W-OUprOTuHz4eEdrfUhC11vXCjgTAEfRVZZe9Gh1bjFTzgIyJGNeZRPKV6Sda5ZsPsW6hzmMcgb4flGW9tGY=w2400"
+                class="img-fluid" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="row middle-grids pt-lg-5">
+          <div class="col-lg-6 advantage-grid-info1">
+            <div class="advantage_left1 text-center">
+              <img src="https://lh3.googleusercontent.com/sySzTBgKT3LBYNKriqYcArxHOo0w582n7qZFhOvMGlx6QyihI1d3UUIEP6S51Zn5-1vBtXzKFw6280GLuBv1E3x6W6IurS0_iSk4Ed7eh-ZjrMOp-ZkwqLmcNyLKw1YZdh_nS4YzpYs=w2400"
+                class="img-fluid" alt="">
+            </div>
+          </div>
+          <div class="col-lg-6 advantage-grid-info pt-md-5">
+            <div class="advantage_left">
+              <h4 class="mb-2">Comunicacion Unificada atravez de</h4>
+              <h3>Microsoft Productivity</h3>
+              <ul class="instalaciones-servicios-ul ml-4 mt-2">
+                <li>Adopción y gestión del cambio para Office 365</li>
+                <li>Phone System 365 - Colaboracion desde cualquier dispositivo y cualquier plataforma</li>
+                <li>Microsoft Smart Rooms</li>
+                <li>Microsoft Enterprise Productivity</li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -167,91 +245,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
   </div> -->
   <!--//newsletter-->
-
-  <!--model-forms-->
-  <!--/Login-->
-  <!-- <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header text-center">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div class="login px-4 mx-auto mw-100">
-            <h5 class="text-center mb-4">Login Now</h5>
-            <form action="#" method="post">
-              <div class="form-group">
-                <label class="mb-2">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                  placeholder="" required="">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-              </div>
-              <div class="form-group">
-                <label class="mb-2">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="" required="">
-              </div>
-              <div class="form-check mb-2">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-              </div>
-              <button type="submit" class="btn btn-primary submit mb-4">Sign In</button>
-              <p class="text-center pb-4">
-                <a href="#" data-toggle="modal" data-target="#exampleModalCenter2"> Don't have an account?</a>
-              </p>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-  <!--//Login-->
-  <!--/Register-->
-  <!-- <div class="modal fade" id="exampleModalCenter2" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header text-center">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div class="login px-4 mx-auto mw-100">
-            <h5 class="text-center mb-4">Register Now</h5>
-            <form action="#" method="post">
-              <div class="form-group">
-                <label>First name</label>
-
-                <input type="text" class="form-control" id="validationDefault01" placeholder="" required="">
-              </div>
-              <div class="form-group">
-                <label>Last name</label>
-                <input type="text" class="form-control" id="validationDefault02" placeholder="" required="">
-              </div>
-
-              <div class="form-group">
-                <label class="mb-2">Password</label>
-                <input type="password" class="form-control" id="password1" placeholder="" required="">
-              </div>
-              <div class="form-group">
-                <label>Confirm Password</label>
-                <input type="password" class="form-control" id="password2" placeholder="" required="">
-              </div>
-
-              <button type="submit" class="btn btn-primary submit mb-4">Register</button>
-              <p class="text-center pb-4">
-                <a href="#">By clicking Register, I agree to your terms</a>
-              </p>
-            </form>
-
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </div> -->
-  <!--//Register-->
 
   <!--//model-form-->
   <!-- js -->
