--- a/vmware.html
+++ b/vmware.html
@@ -26,7 +26,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   <link rel="icon" href="./images/Logotipo Genesys Solo Abaco.png">
   <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
   <link href="css/style.css" rel='stylesheet' type='text/css' />
-  <link href="css/contact.css" rel='stylesheet' type='text/css' />
+  <link href="css/vmware.css" rel='stylesheet' type='text/css' />
+  <link href="css/impresion.css" rel='stylesheet' type='text/css' />
   <link href="css/fontawesome-all.css" rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800" rel="stylesheet">
 </head>
@@ -85,13 +86,53 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- //header-top-->
   </section>
   <!-- //mian-content-->
-  <!-- /Contact-->
+  <!-- /vmware-->
   <section class="banner-bottom py-lg-5 py-md-5 py-3">
     <div class="container">
       <div class="inner-sec py-lg-5 py-3">
 
-        <h3 class="tittle text-center mb-md-5 mb-4">VMware</h3>
+        <div class="row middle-grids pt-lg-5">
+          <div class="col-lg-6 advantage-grid-info pt-md-3">
+            <div class="advantage_left">
+              <!-- <h4 class="mb-2">SAI</h4> -->
+              <h3>Enterprise Solution Provider</h3>
+              <p class="mt-2">
+                VMware es la plataforma de virtualización líder del sector para construir infraestructuras de cloud.
+                Permite a los usuarios ejecutar aplicaciones críticas para el negocio con confianza y responder con
+                mayor rapidez a las necesidades empresariales.
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-6 advantage-grid-info1">
+            <div class="advantage_left1 text-center">
+              <img src="./images/vmware-partner.png" class="img-fluid" alt="vmware enterprise partner">
+            </div>
+          </div>
+        </div>
 
+      </div>
+    </div>
+  </section>
+
+  <section class="choose py-5">
+    <div class="container py-md-4 mt-md-3">
+      <div class="row inner_w3l_agile_grids-1 ">
+        <div class="col-lg-7 w3layouts_choose_left_grid1">
+          <div class="choose_top">
+            <h3 class="w3l_header text-white mb-3 mt-3">Virtualizacion de Servidores Intel</h3>
+            <!-- <h4 class="mb-3 mt-3 text-white">Feel Free to Contact Our Agents Directly</h4> -->
+            <!-- <h4 class="mb-3 mt-3 text-white">Contacta a Nuestros Asesores Tecnicos</h4> -->
+            <!-- <p class="text-white">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
+              at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum in,
+              egestas vestibulum tellus.</p> -->
+            <p class="text-white">
+              vSphere permite a las organizaciones de TI eliminar los costosos proyectos de expansión del centro de
+              datos que interrumpen las operaciones empresariales, gracias a la posibilidad de consolidar 15 máquinas
+              virtuales o más en un solo servidor físico sin sacrificar el rendimiento ni la producción.
+            </p>
+            <a href="servicios.html" class="btn btn-primary mt-3">Servicios</a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
