vmware card section

--- a/vmware.html
+++ b/vmware.html
@@ -121,16 +121,71 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <div class="choose_top">
             <h3 class="w3l_header text-white mb-3 mt-3">Virtualizacion de Servidores Intel</h3>
             <!-- <h4 class="mb-3 mt-3 text-white">Feel Free to Contact Our Agents Directly</h4> -->
-            <!-- <h4 class="mb-3 mt-3 text-white">Contacta a Nuestros Asesores Tecnicos</h4> -->
+            <h4 class="mb-3 mt-3 text-white">Ambientes Greenfield y Brownfiled</h4>
             <!-- <p class="text-white">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
               at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum in,
               egestas vestibulum tellus.</p> -->
             <p class="text-white">
               vSphere permite a las organizaciones de TI eliminar los costosos proyectos de expansión del centro de
               datos que interrumpen las operaciones empresariales, gracias a la posibilidad de consolidar 15 máquinas
-              virtuales o más en un solo servidor físico sin sacrificar el rendimiento ni la producción.
+              virtuales o más en un solo servidor físico sin sacrificar el rendimiento ni la producción. <br><br>
+              Contamos
+              con amplia experiencia en diseño e implementación de ambientes virtuales nuevos, soluciones de diseño de
+              arquitectura para ambientes existentes físicos o virtuales.
             </p>
-            <a href="servicios.html" class="btn btn-primary mt-3">Servicios</a>
+            <a href="servicios.html" class="btn btn-primary vmware-button mt-3">Servicios</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="banner-bottom py-lg-5 py-md-5 py-3" id="services">
+    <div class="container">
+      <div class="inner-sec py-lg-5 py-3">
+        <h3 class="tittle text-center mb-md-5 mb-4">Soluciones High Availability & Disaster Recovery</h3>
+        <!-- 3 card section -->
+        <div class="row middle-grids pt-lg-5">
+          <div class="col-lg-4 about-in middle-grid-info text-center">
+            <div class="card">
+              <div class="card-body">
+                <i class="fas fa-cogs mb-2"></i>
+                <h5 class="card-title text-uppercase my-3">
+                  High Availability
+                </h5>
+                <p class="card-text">
+                  es la solución automatizada más rentable para el reinicio de todas las aplicaciones en cuestión de
+                  minutos en caso de un fallo de hardware o del sistema operativo
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 about-in middle-grid-info text-center">
+            <div class="card">
+              <div class="card-body">
+                <i class="fas fa-key mb-2"></i>
+                <h5 class="card-title text-uppercase my-3">
+                  vCenter Server
+                </h5>
+                <p class="card-text">
+                  proporciona gestión unificada para toda la infraestructura virtual y habilita muchas de las
+                  principales funciones de vSphere, como la migración en caliente.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 about-in middle-grid-info text-center">
+            <div class="card">
+              <div class="card-body">
+                <i class="fas fa-wrench mb-2"></i>
+                <h5 class="card-title text-uppercase my-3">VMware Site Recovery Manager</h5>
+                <p class="card-text">
+                  es una solución líder en el sector, que proporciona disponibilidad de las aplicaciones y movilidad
+                  entre sitios en entornos de cloud privada, se integra con una tecnología de replicación subyacente
+                  para realizar una gestión basada en políticas de los planes de recuperación.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -209,92 +264,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   </div> -->
   <!--//newsletter-->
 
-  <!--model-forms-->
-  <!--/Login-->
-  <!-- <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header text-center">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div class="login px-4 mx-auto mw-100">
-            <h5 class="text-center mb-4">Login Now</h5>
-            <form action="#" method="post">
-              <div class="form-group">
-                <label class="mb-2">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                  placeholder="" required="">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-              </div>
-              <div class="form-group">
-                <label class="mb-2">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="" required="">
-              </div>
-              <div class="form-check mb-2">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-              </div>
-              <button type="submit" class="btn btn-primary submit mb-4">Sign In</button>
-              <p class="text-center pb-4">
-                <a href="#" data-toggle="modal" data-target="#exampleModalCenter2"> Don't have an account?</a>
-              </p>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-  <!--//Login-->
-  <!--/Register-->
-  <!-- <div class="modal fade" id="exampleModalCenter2" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header text-center">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div class="login px-4 mx-auto mw-100">
-            <h5 class="text-center mb-4">Register Now</h5>
-            <form action="#" method="post">
-              <div class="form-group">
-                <label>First name</label>
 
-                <input type="text" class="form-control" id="validationDefault01" placeholder="" required="">
-              </div>
-              <div class="form-group">
-                <label>Last name</label>
-                <input type="text" class="form-control" id="validationDefault02" placeholder="" required="">
-              </div>
-
-              <div class="form-group">
-                <label class="mb-2">Password</label>
-                <input type="password" class="form-control" id="password1" placeholder="" required="">
-              </div>
-              <div class="form-group">
-                <label>Confirm Password</label>
-                <input type="password" class="form-control" id="password2" placeholder="" required="">
-              </div>
-
-              <button type="submit" class="btn btn-primary submit mb-4">Register</button>
-              <p class="text-center pb-4">
-                <a href="#">By clicking Register, I agree to your terms</a>
-              </p>
-            </form>
-
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </div> -->
-  <!--//Register-->
-
-  <!--//model-form-->
   <!-- js -->
   <script src="js/jquery-2.2.3.min.js"></script>
   <script>
