--- a/infraestructura.html
+++ b/infraestructura.html
@@ -26,8 +26,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   <link rel="icon" href="./images/Logotipo Genesys Solo Abaco.png">
   <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
   <link href="css/style.css" rel='stylesheet' type='text/css' />
-  <link href="css/contact.css" rel='stylesheet' type='text/css' />
-  <link href="css/fontawesome-all.css" rel="stylesheet">
+  <link href="css/infraestructura.css" rel='stylesheet' type='text/css' />
   <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800" rel="stylesheet">
 </head>
 
@@ -86,13 +85,81 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- //header-top-->
   </section>
   <!-- //mian-content-->
-  <!-- /Contact-->
+
+  <!-- /Infeaestructura-->
   <section class="banner-bottom py-lg-5 py-md-5 py-3">
     <div class="container">
       <div class="inner-sec py-lg-5 py-3">
 
-        <h3 class="tittle text-center mb-md-5 mb-4">Infraestructura</h3>
+        <div class="row middle-grids">
 
+          <div class="col-lg-3 advantage-grid-info1 d-flex">
+            <div class="text-center align-self-center">
+              <img src="./images/lenovo-bp.jpg" class="img-fluid lenovo-bp" alt="lenovo business partner">
+            </div>
+          </div>
+
+          <div class="col-lg-6 advantage-grid-info pt-md-3">
+            <div class="advantage_left">
+              <!-- <h4 class="mb-2">SAI</h4> -->
+              <h3>Infraestructura</h3>
+              <hr>
+              <p class="mt-2">
+                Basados en tecnología IBM y Lenovo, ofrecemos soluciones enfocadas a contribuir con la optimización de
+                las operaciones de nuestros clientes, ofreciendo servicios de Venta de equipos, servicios de asesoría y
+                soporte, análisis de requerimientos y dimensionamiento de infraestructura central, consolidación y
+                virtualización de servicios (aplicaciones) en diferentes plataformas operativas.
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-3 advantage-grid-info1 d-flex">
+            <div class="text-center align-self-center">
+              <img src="./images/ibm-bp.png" class="img-fluid ibm-bp" alt="ibm business partner">
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+  </section>
+  <!-- //Infeaestructura-->
+
+  <!-- /Servidores-->
+  <section class="choose py-5">
+    <div class="container py-md-4 mt-md-3">
+      <div class="row inner_w3l_agile_grids-1 ">
+        <div class="col-lg-7 w3layouts_choose_left_grid1">
+          <div class="choose_top">
+            <h3 class="w3l_header text-white">Servidores</h3>
+            <!-- <h4 class="mb-3 mt-3 text-white">Feel Free to Contact Our Agents Directly</h4> -->
+            <h4 class="mb-3 mt-3 text-white">Contacta a Nuestros Asesores Tecnicos</h4>
+            <!-- <p class="text-white">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
+                at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum in,
+                egestas vestibulum tellus.</p> -->
+            <p class="text-white">
+              Como parte de los productos que ofrecemos están:
+            </p>
+            <ul class="ml-3">
+              <li class="text-white">
+                Servidores System X y Bladecenter
+                (Soluciones basadas en ambientes Windows, Linux).
+              </li>
+              <li class="text-white">
+                Servidores System Power (Soluciones basadas en ambientes AIX, Linux e iOS).
+              </li>
+              <li class="text-white">
+                IBM Security Network Intrusion Prevention System, Solución para protección de la infraestructura de
+                ataques mediante el módulo análisis de protocolos (PAM) en tiempo real.
+              </li>
+            </ul>
+            <p class="text-white mt-2">
+              Soluciones de Virtualización de ambientes operativos, ya sea para computo central, como escritorios
+              virtuales (VMware, Citrix, HyperV, Terminales Thin client)
+            </p>
+            <a href="servicios.html" class="btn btn-primary mt-3">Servicios</a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -169,92 +236,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   </div> -->
   <!--//newsletter-->
 
-  <!--model-forms-->
-  <!--/Login-->
-  <!-- <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header text-center">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div class="login px-4 mx-auto mw-100">
-            <h5 class="text-center mb-4">Login Now</h5>
-            <form action="#" method="post">
-              <div class="form-group">
-                <label class="mb-2">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                  placeholder="" required="">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-              </div>
-              <div class="form-group">
-                <label class="mb-2">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="" required="">
-              </div>
-              <div class="form-check mb-2">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-              </div>
-              <button type="submit" class="btn btn-primary submit mb-4">Sign In</button>
-              <p class="text-center pb-4">
-                <a href="#" data-toggle="modal" data-target="#exampleModalCenter2"> Don't have an account?</a>
-              </p>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-  <!--//Login-->
-  <!--/Register-->
-  <!-- <div class="modal fade" id="exampleModalCenter2" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header text-center">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div class="login px-4 mx-auto mw-100">
-            <h5 class="text-center mb-4">Register Now</h5>
-            <form action="#" method="post">
-              <div class="form-group">
-                <label>First name</label>
-
-                <input type="text" class="form-control" id="validationDefault01" placeholder="" required="">
-              </div>
-              <div class="form-group">
-                <label>Last name</label>
-                <input type="text" class="form-control" id="validationDefault02" placeholder="" required="">
-              </div>
-
-              <div class="form-group">
-                <label class="mb-2">Password</label>
-                <input type="password" class="form-control" id="password1" placeholder="" required="">
-              </div>
-              <div class="form-group">
-                <label>Confirm Password</label>
-                <input type="password" class="form-control" id="password2" placeholder="" required="">
-              </div>
-
-              <button type="submit" class="btn btn-primary submit mb-4">Register</button>
-              <p class="text-center pb-4">
-                <a href="#">By clicking Register, I agree to your terms</a>
-              </p>
-            </form>
-
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </div> -->
-  <!--//Register-->
-
-  <!--//model-form-->
   <!-- js -->
   <script src="js/jquery-2.2.3.min.js"></script>
   <script>
@@ -284,26 +265,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
   </script>
   <!-- //dropdown nav -->
-
-  <!-- password-script -->
-  <!-- <script>
-    window.onload = function () {
-      document.getElementById("password1").onchange = validatePassword;
-      document.getElementById("password2").onchange = validatePassword;
-    }
-
-    function validatePassword() {
-      var pass2 = document.getElementById("password2").value;
-      var pass1 = document.getElementById("password1").value;
-      if (pass1 != pass2)
-        document.getElementById("password2").setCustomValidity("Passwords Don't Match");
-      else
-        document.getElementById("password2").setCustomValidity('');
-      //empty string means no validation error
-    }
-
-  </script> -->
-  <!-- //password-script -->
 
   <!--/ start-smoth-scrolling -->
   <script src="js/move-top.js"></script>
