--- a/vmware.html
+++ b/vmware.html
@@ -129,9 +129,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               vSphere permite a las organizaciones de TI eliminar los costosos proyectos de expansión del centro de
               datos que interrumpen las operaciones empresariales, gracias a la posibilidad de consolidar 15 máquinas
               virtuales o más en un solo servidor físico sin sacrificar el rendimiento ni la producción. <br><br>
-              Contamos
-              con amplia experiencia en diseño e implementación de ambientes virtuales nuevos, soluciones de diseño de
-              arquitectura para ambientes existentes físicos o virtuales.
+              Contamos con amplia experiencia en diseño e implementación de ambientes virtuales nuevos, soluciones de
+              diseño de arquitectura para ambientes existentes físicos o virtuales.
             </p>
             <a href="servicios.html" class="btn btn-primary vmware-button mt-3">Servicios</a>
           </div>
@@ -140,57 +139,90 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
   </section>
 
-  <section class="banner-bottom py-lg-5 py-md-5 py-3" id="services">
+  <!-- /HA y DR y servicios de vmware -->
+  <section class="banner-bottom py-md-5 py-3" id="services">
     <div class="container">
       <div class="inner-sec py-lg-5 py-3">
-        <h3 class="tittle text-center mb-md-5 mb-4">Soluciones High Availability & Disaster Recovery</h3>
-        <!-- 3 card section -->
+        <!-- <h3 class="tittle text-center mb-md-5 mb-4">Nuestro Compromiso</h3> -->
         <div class="row middle-grids pt-lg-5">
-          <div class="col-lg-4 about-in middle-grid-info text-center">
-            <div class="card">
-              <div class="card-body">
-                <i class="fas fa-cogs mb-2"></i>
-                <h5 class="card-title text-uppercase my-3">
-                  High Availability
-                </h5>
-                <p class="card-text">
-                  es la solución automatizada más rentable para el reinicio de todas las aplicaciones en cuestión de
-                  minutos en caso de un fallo de hardware o del sistema operativo
-                </p>
-              </div>
+          <div class="col-lg-6 advantage-grid-info pt-md-5">
+            <div class="advantage_left">
+              <h4 class="mb-2">High Availability</h4>
+              <h3>HA</h3>
+              <p class="mt-2">
+                HA es la solución automatizada más rentable para el reinicio de todas las aplicaciones en cuestión de
+                minutos en caso de un fallo de hardware o del sistema operativo
+              </p>
             </div>
           </div>
-          <div class="col-lg-4 about-in middle-grid-info text-center">
-            <div class="card">
-              <div class="card-body">
-                <i class="fas fa-key mb-2"></i>
-                <h5 class="card-title text-uppercase my-3">
-                  vCenter Server
-                </h5>
-                <p class="card-text">
-                  proporciona gestión unificada para toda la infraestructura virtual y habilita muchas de las
-                  principales funciones de vSphere, como la migración en caliente.
-                </p>
-              </div>
+          <div class="col-lg-6 advantage-grid-info1">
+            <div class="advantage_left1 text-center">
+              <img src="./images/vmware-ha.jpg" class="img-fluid" alt="High Availability Diagram">
             </div>
           </div>
-          <div class="col-lg-4 about-in middle-grid-info text-center">
-            <div class="card">
-              <div class="card-body">
-                <i class="fas fa-wrench mb-2"></i>
-                <h5 class="card-title text-uppercase my-3">VMware Site Recovery Manager</h5>
-                <p class="card-text">
-                  es una solución líder en el sector, que proporciona disponibilidad de las aplicaciones y movilidad
-                  entre sitios en entornos de cloud privada, se integra con una tecnología de replicación subyacente
-                  para realizar una gestión basada en políticas de los planes de recuperación.
-                </p>
+        </div>
+        <div class="row middle-grids pt-lg-5">
+          <div class="col-lg-6 advantage-grid-info1">
+            <div class="advantage_left1 text-center">
+              <img src="./images/vmware-srm.jpg" class="img-fluid" alt="Site Recovery Manager Diagram">
+            </div>
+          </div>
+          <div class="col-lg-6 advantage-grid-info pt-md-5">
+            <div class="advantage_left">
+              <h4 class="mb-2">Disaster Recovery</h4>
+              <h3>VMware Site Recovery Manager</h3>
+              <p class="mt-2">
+                VMware Site Recovery Manager es una solución líder en el sector, que proporciona disponibilidad de las
+                aplicaciones y movilidad entre sitios en entornos de cloud privada, se integra con una tecnología de
+                replicación subyacente para realizar una gestión basada en políticas de los planes de recuperación.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Servicios de VMware -->
+        <div class="row middle-grids pt-lg-5">
+          <div class="col-lg-8 advantage-grid-info pt-md-5">
+            <div class="advantage_left">
+              <!-- <h4 class="mb-2">Servicios</h4> -->
+              <h3 class="mb-2">Servicios</h3>
+              <!-- <p class="mt-2">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
+                        at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum
+                        in, egestas vestibulum tellus.</p> -->
+              <div class="row">
+                <div class="col-lg-6">
+                  <ul class="vmware-servicios-ul">
+                    <li>Estudios de Consolidacion</li>
+                    <li>Implementacion de Ambiente Virtual en HA</li>
+                    <li>Implementacion de Solucion de DR y servicios de vmwareP</li>
+                    <li>Análisis para optimización-consolidación de ambientes virtuales (VOA)</li>
+                    <li>Seguridad F&iacute;sica y L&oacute;gica.</li>
+                  </ul>
+                </div>
+                <div class="col-lg-6">
+                  <ul class="vmware-servicios-ul">
+                    <li>Migración de Ambiente Físico-Virtual y Virtual-Virtual</li>
+                    <li>Análisis del estado de salud (Healthcheck)</li>
+                    <li>Soporte telefónico y presencial para solución de fallas y/o diseño de
+                      arquitecturas virtuales.</li>
+                    <li>Contratos de Mantenimiento.</li>
+                    <li>Servicios de Migraci&oacute;n</li>
+                  </ul>
+                </div>
               </div>
+
+            </div>
+          </div>
+          <div class="col-lg-4 advantage-grid-info1">
+            <div class="advantage_left1 text-center">
+              <img src="images/vmware-services.jpg" class="img-fluid" alt="Data Center">
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+  <!-- //HA y DR y servicios de vmware -->
 
   <!--/newsletter-->
   <footer class="newsletter_right pymd-5 py-4" id="footer">
