--- a/infraestructura.html
+++ b/infraestructura.html
@@ -163,6 +163,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       </div>
     </div>
   </section>
+  <!-- //Servidores-->
 
   <!--/newsletter-->
   <footer class="newsletter_right pymd-5 py-4" id="footer">
